Top bar spacing fixes

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -266,9 +266,11 @@ select:focus {
 	padding-right: 0;
 }
 .nav-bar-secondary {
-    position: fixed;
+    position: absolute;
+    max-width: 130px;
     top: 70px;
-    padding: 0 10px;
+    right: 0;
+    padding: 0;
     margin-left: -10px;
     background-color: white;
     border-left: 1px solid rgb(205,212,222);
@@ -283,8 +285,8 @@ select:focus {
 }
 .nav-bar-secondary li {
 	height: 50px;
-    padding-top: 12px;
-    padding-right: 60px;
+    padding: 12px 20px 0 20px;
+	width: 130px;
 }
 .nav-bar-secondary li:last-child {
 	border-top: 1px solid rgb(205,212,222);
